--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@11ty/eleventy": "^2.0.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
